<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="controle.ActivityCadInvestidor"

    >










            <ImageButton
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintBottom_toTopOf="@+id/txtNomeCadIN"
                android:id="@+id/btnselcfoto"
                android:layout_width="150dp"
                android:layout_height="150dp"
                android:layout_gravity="center"
                android:layout_marginTop="0dp"
                android:background="@drawable/btnredondo"
                android:text="@string/add_foto"
                android:textColor="@android:color/white"
                android:textStyle="bold" />









        <EditText
            android:id="@+id/barnomeCadIN"
            app:layout_constraintTop_toBottomOf="@id/btnselcfoto"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintBottom_toTopOf="@+id/baremailCadIN"
            android:layout_width="350dp"
            android:layout_height="40dp"
            android:layout_gravity="center"
            android:layout_marginTop="50dp"
            android:textSize="8pt"
            android:ems="24"
            android:background="@drawable/barrasdetexto"
            android:inputType="textPersonName"
            android:hint="Nome Completo"
            tools:ignore="Autofill,HardcodedText,LabelFor"
            />

        <EditText
            android:id="@+id/baremailCadIN"
            android:hint="exemplo@email.com"
            app:layout_constraintTop_toBottomOf="@+id/barnomeCadIN"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintBottom_toTopOf="@+id/barsenhaCadIN"
            android:layout_width="350dp"
            android:layout_height="40dp"
            android:textSize="8pt"
            android:background="@drawable/barrasdetexto"
            android:layout_gravity="center"
            tools:ignore="Autofill,HardcodedText,LabelFor,TextFields" />

        <EditText
            android:id="@+id/barsenhaCadIN"
            app:layout_constraintTop_toBottomOf="@id/baremailCadIN"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintBottom_toTopOf="@+id/vlpratimonio"
            android:layout_width="350dp"
            android:layout_height="40dp"
            android:ems="10"
            android:textSize="8pt"
            android:background="@drawable/barrasdetexto"
            tools:text="xxxxxxxx"
            android:inputType="textPassword"
            tools:ignore="Autofill,LabelFor" />

        <EditText
            android:id="@+id/vlpratimonio"
            app:layout_constraintTop_toBottomOf="@id/barsenhaCadIN"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintBottom_toTopOf="@id/btnconcluirCadIN"
            android:layout_width="350dp"
            android:layout_height="40dp"
            android:layout_gravity="center"
            android:ems="10"
            android:textSize="8pt"
            android:background="@drawable/barrasdetexto"
            android:inputType="numberDecimal"
            android:hint="Valor do Se patrimonio"
            tools:ignore="Autofill,HardcodedText,LabelFor" />

        <Button
            android:id="@+id/btnconcluirCadIN"
            app:layout_constraintTop_toBottomOf="@id/vlpratimonio"
            app:layout_constraintBottom_toTopOf="@+id/txtCadSocialIN"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            android:layout_width="350dp"
            android:layout_height="50dp"
            android:background="#eed700"
            android:text="@string/concluir"
            android:textColor="@android:color/white"
            />

    <TextView
        android:id="@+id/txtCadSocialIN"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/ou_cadastre_se_com_fcebook_ou_google"
        app:layout_constraintTop_toBottomOf="@+id/btnconcluirCadIN"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintBottom_toTopOf="@+id/btnCadFacebookIN"
        tools:layout_editor_absoluteY="680dp" />

    <Button
        android:id="@+id/btnCadFacebookIN"
        android:layout_width="350dp"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toTopOf="@+id/btnCadGoogleIN"
        app:layout_constraintTop_toBottomOf="@+id/txtCadSocialIN"
        android:text="@string/facebook"
        android:textColor="#ffffff"
        android:background="#3b5998"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        />

    <Button
        android:id="@+id/btnCadGoogleIN"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btnCadFacebookIN"
        android:layout_width="350dp"
        android:layout_height="wrap_content"
        android:textColor="#ffffff"
        android:text="@string/google"
        android:background="#db4a39"
        />

    <TextView
        android:id="@+id/txtNomeCadIN"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/nome_completo"
        android:textColor="#eed700"
        android:textStyle="bold"
        app:layout_constraintBottom_toTopOf="@+id/barnomeCadIN"
        app:layout_constraintEnd_toStartOf="@+id/btnselcfoto"
        app:layout_constraintStart_toStartOf="@+id/barnomeCadIN"
        app:layout_constraintTop_toBottomOf="@id/btnselcfoto"
        android:layout_marginTop="30dp"
        />

    <TextView
        android:id="@+id/textView2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toStartOf="@id/txtNomeCadIN"
        app:layout_constraintEnd_toEndOf="@id/txtNomeCadIN"
        app:layout_constraintTop_toBottomOf="@id/barnomeCadIN"
        app:layout_constraintBottom_toTopOf="@+id/baremailCadIN"
        android:layout_marginEnd="60dp"
        android:textColor="#eed700"
        android:textStyle="bold"
        android:text="@string/email"
        tools:layout_editor_absoluteX="37dp"
        tools:layout_editor_absoluteY="262dp" />

    <TextView
        android:id="@+id/textView3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/senha"
        android:layout_marginEnd="60dp"
        android:textColor="#eed700"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="@id/txtNomeCadIN"
        app:layout_constraintEnd_toEndOf="@id/txtNomeCadIN"
        app:layout_constraintTop_toBottomOf="@id/baremailCadIN"
        app:layout_constraintBottom_toTopOf="@id/barsenhaCadIN"
        tools:layout_editor_absoluteX="33dp"
        tools:layout_editor_absoluteY="335dp" />


</androidx.constraintlayout.widget.ConstraintLayout>



