<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="controle.Cad_EM_Activity"


    >




        <ImageButton

            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintBottom_toTopOf="@+id/barnomeCadEm"
            android:id="@+id/btnselcFotoCadEm"
            android:layout_width="150dp"
            android:layout_height="150dp"
            android:background="@drawable/btnredondo"
            android:textColor="@android:color/white"
           />










    <EditText

        android:id="@+id/barnomeCadEm"
        app:layout_constraintTop_toBottomOf="@id/btnselcFotoCadEm"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toTopOf="@+id/baremailCadEm"
        android:layout_width="350dp"
        android:layout_height="40dp"
        android:textSize="8pt"
        android:textAlignment="textStart"
        android:background="@drawable/barrasdetexto"
        android:inputType="textPersonName"
        android:hint="Nome Completo"
        tools:ignore="Autofill,HardcodedText,LabelFor"
        />

    <EditText
        android:id="@+id/baremailCadEm"
        android:hint="exemplo@email.com"
        app:layout_constraintTop_toBottomOf="@+id/barnomeCadEm"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toTopOf="@+id/barsenhaCadEm"
        android:background="@drawable/barrasdetexto"
        android:layout_width="350dp"
        android:layout_height="40dp"
        android:layout_gravity="center"
        tools:ignore="Autofill,HardcodedText,LabelFor,TextFields" />

    <EditText
        android:id="@+id/barsenhaCadEm"
        android:layout_width="350dp"
        android:layout_height="40dp"
        android:ems="10"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/baremailCadEm"
        app:layout_constraintBottom_toTopOf="@id/btnconcluirCadEm"
        tools:ignore="Autofill,LabelFor"
        android:background="@drawable/barrasdetexto"
         />

    <Button
        android:id="@+id/btnconcluirCadEm"
        android:layout_width="350dp"
        android:layout_height="wrap_content"
        android:background="#eed700"
        android:text="@string/concluir"
        android:textColor="@android:color/white"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/barsenhaCadEm"
        app:layout_constraintBottom_toBottomOf="parent"
        />

    <TextView
        android:id="@+id/txtNomeCadEM"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/nome_completo"
        android:textColor="#eed700"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="@+id/barnomeCadEm"
        app:layout_constraintEnd_toStartOf="@+id/btnselcFotoCadEm"
        app:layout_constraintBottom_toTopOf="@+id/barnomeCadEm"
        app:layout_constraintTop_toBottomOf="@id/btnselcFotoCadEm"
        android:layout_marginBottom="10dp"
         />

    <TextView
        android:id="@+id/txtEmailCadEM"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toStartOf="@id/txtNomeCadEM"
        app:layout_constraintEnd_toEndOf="@id/txtNomeCadEM"
        app:layout_constraintTop_toBottomOf="@id/barnomeCadEm"
        app:layout_constraintBottom_toTopOf="@+id/baremailCadEm"
        android:layout_marginEnd="60dp"
        android:textColor="#eed700"
        android:textStyle="bold"
        android:text="@string/email"
        tools:layout_editor_absoluteX="37dp"
        tools:layout_editor_absoluteY="262dp" />

    <TextView
        android:id="@+id/txtSenhaEM"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/senha"
        android:layout_marginEnd="60dp"
        android:textColor="#eed700"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="@id/txtNomeCadEM"
        app:layout_constraintEnd_toEndOf="@id/txtNomeCadEM"
        app:layout_constraintTop_toBottomOf="@id/baremailCadEm"
        app:layout_constraintBottom_toTopOf="@id/barsenhaCadEm"
        tools:layout_editor_absoluteX="33dp"
        tools:layout_editor_absoluteY="335dp"/>

    <TextView
        android:id="@+id/txtAddFoto"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/add_foto"
        android:textColor="#ffffff"
        android:textSize="20sp"
        app:layout_constraintBottom_toBottomOf="@id/btnselcFotoCadEm"
        app:layout_constraintTop_toTopOf="@id/btnselcFotoCadEm"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        tools:layout_editor_absoluteY="100dp" />


</androidx.constraintlayout.widget.ConstraintLayout>



