<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:background="@android:color/white"
    android:orientation="vertical"
    tools:context="controle.MainActivity"
    android:theme="@style/AppTheme.NoActionBar"
    >



    <ImageView
        android:id="@+id/imgLogoLogin"
        android:layout_width="200dp"
        android:layout_height="200dp"
        android:src="@mipmap/logo"
        android:layout_marginTop="10dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toTopOf="@id/barEmailLogin"
        android:scaleType="centerCrop"
        android:contentDescription="@string/imglogo"
         />







        <EditText
            android:background="@drawable/barrasdetexto"
            android:id="@+id/barEmailLogin"
            android:layout_width="350dp"
            android:layout_height="40dp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintBottom_toTopOf="@+id/barSenhaLogin"
            app:layout_constraintTop_toBottomOf="@+id/imgLogoLogin"
            android:layout_gravity="center"
            android:layout_marginStart="30dp"
            android:layout_marginTop="0dp"
            android:layout_marginEnd="30dp"
            android:importantForAutofill="no"
            android:inputType="textEmailAddress"
            tools:ignore="LabelFor" />

        <EditText
            android:background="@drawable/barrasdetexto"
            android:id="@+id/barSenhaLogin"
            android:layout_width="350dp"
            android:layout_height="40dp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintBottom_toTopOf="@+id/btnLogarLogin"
            app:layout_constraintTop_toBottomOf="@+id/barEmailLogin" android:layout_marginStart="30dp"
            android:layout_marginEnd="30dp"
            android:inputType="textPassword"
            tools:ignore="LabelFor"
            tools:targetApi="p" />

        <Button
            android:id="@+id/btnLogarLogin"
            android:layout_width="200dp"
            android:layout_height="40dp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintBottom_toTopOf="@+id/txtLoginSocial"
            app:layout_constraintTop_toBottomOf="@+id/barSenhaLogin"
            android:textColor="#ffffff"
            android:text="@string/entrar"
            android:background="@drawable/btnloginshape"
            android:layout_marginBottom="6dp"
            />


    <TextView
        android:id="@+id/btnEsqueci"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="800dp"
        android:background="@null"
        android:text="@string/esqueci_minha_senha"
        android:textColor="#aaaaaa"
        android:layout_marginBottom="6dp"
        android:layout_marginTop="3dp"
        app:layout_constraintBottom_toTopOf="@id/btnLogarLogin"
        app:layout_constraintEnd_toEndOf="@id/barSenhaLogin"
        app:layout_constraintHorizontal_bias="0.093"
        app:layout_constraintStart_toEndOf="@id/btnLogarLogin"
        app:layout_constraintTop_toBottomOf="@id/barSenhaLogin"
        android:linksClickable="true"

        />

    <TextView
            android:id="@+id/txtLoginSocial"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintBottom_toTopOf="@+id/btnFacebookLogin"
            app:layout_constraintTop_toBottomOf="@+id/btnLogarLogin"
            android:layout_gravity="center"
            android:layout_marginBottom="6dp"
            android:text="@string/ou_continuar_com"
            android:textStyle="bold"
            android:textAlignment="center"
            android:textSize="15sp"
            />





    <com.facebook.login.widget.LoginButton
        android:background="#3b5998"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/txtLoginSocial"
        app:layout_constraintBottom_toTopOf="@id/sign_in_button"
        android:id="@+id/btnFacebookLogin"
        android:layout_width="200dp"
        android:layout_height="35dp"
        android:text="@string/facebook"
        android:layout_marginBottom="6dp"
        android:textColor="@android:color/white"
        android:layout_gravity="center_horizontal"
        tools:layout_editor_absoluteX="213dp"
        tools:layout_editor_absoluteY="36dp" />



    <com.google.android.gms.common.SignInButton
        android:id="@+id/sign_in_button"
        android:layout_width="200dp"
        android:layout_height="35dp"
        android:textColor="@android:color/white"
        android:layout_marginBottom="8dp"
        app:layout_constraintBottom_toTopOf="@id/btnCadEmail"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btnFacebookLogin"/>

    <Button
            android:id="@+id/btnCadEmail"
            android:layout_width="350dp"
            android:layout_height="40dp"
            android:layout_marginBottom="6dp"
            android:background="#eedd66"
            android:text="@string/e_mail"
            android:textColor="#555555"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/sign_in_button"

            />

    <TextView
        android:id="@+id/txtEmailLogin"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="E-mail"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/imgLogoLogin"
        app:layout_constraintBottom_toTopOf="@id/barEmailLogin"
        android:layout_marginEnd="300dp"
        android:textColor="#eed700"
        android:textStyle="bold"
        tools:layout_editor_absoluteX="33dp"
        tools:layout_editor_absoluteY="287dp" />

    <TextView
        android:id="@+id/txtsenha"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Senha"
        app:layout_constraintStart_toStartOf="@id/txtEmailLogin"
        app:layout_constraintEnd_toEndOf="@id/txtEmailLogin"
        android:textColor="#eed700"
        android:textStyle="bold"
        app:layout_constraintBottom_toTopOf="@id/barSenhaLogin"
        app:layout_constraintTop_toBottomOf="@id/barEmailLogin"
        tools:layout_editor_absoluteX="33dp" />


</androidx.constraintlayout.widget.ConstraintLayout>