<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="controle.cadastros.Activity_AddIdeia">

    <TextView
        android:id="@+id/txtAddNovaIdeia"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:text="@string/adicionar_nova_ideias"
        android:textSize="10pt"
        android:textStyle="bold"
        android:textColor="#000000"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toTopOf="@id/imgUserAddNovaIdeia"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />









    <de.hdodenhof.circleimageview.CircleImageView
        android:id="@+id/imgUserAddNovaIdeia"
        android:layout_width="48dp"
        android:layout_height="48dp"
        android:src="@drawable/btnloginshape"
        app:layout_constraintStart_toStartOf="@+id/conteudoAddIdeia"
        app:layout_constraintTop_toBottomOf="@+id/txtAddNovaIdeia"
        app:layout_constraintBottom_toTopOf="@id/conteudoAddIdeia"
        android:layout_marginTop="50dp"
        android:layout_marginBottom="20dp"
        android:layout_marginStart="16dp"
        android:background="@drawable/btnredondo"
        tools:ignore="ContentDescription" />

    <TextView
        app:layout_constraintTop_toTopOf="@+id/imgUserAddNovaIdeia"
        app:layout_constraintStart_toEndOf="@+id/imgUserAddNovaIdeia"
        app:layout_constraintBottom_toBottomOf="@+id/imgUserAddNovaIdeia"
        android:id="@+id/txtusename"
        android:layout_marginStart="5dp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/nome_do_usuario"
        android:textStyle="bold"
        android:textColor="#000000"
        tools:layout_editor_absoluteX="73dp"
        tools:layout_editor_absoluteY="98dp" />
    <EditText
        android:id="@+id/conteudoAddIdeia"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toTopOf="@+id/descricao"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imgUserAddNovaIdeia"
        android:layout_marginTop="15dp"
        android:textColor="#000000"
        tools:hint="Titulo"
        android:textSize="24dp"
        />



    <EditText
        android:id="@+id/descricao"
        android:layout_width="0dp"
        android:layout_height="300dp"
        android:background="@drawable/barrasdetexto"
        android:contentDescription="@android:string/autofill"
        android:scaleType="centerCrop"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toTopOf="@+id/btnConcluirAddIdeia"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/conteudoAddIdeia"
 />
    <Button
        android:id="@+id/btnConcluirAddIdeia"
        android:layout_width="350dp"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/descricao"
        app:layout_constraintBottom_toBottomOf="parent"
        android:text="@string/concluir"
        android:background="@drawable/btnloginshape"
        android:textColor="#ffffff"
        />


</androidx.constraintlayout.widget.ConstraintLayout>